[package]
name = "ncmpc"
version = "0.0.1"
authors = ["Benjamin Chrétien <chretien.b@gmail.com>"]

[dependencies]
chrono = "0.4.0"
mpd = "0.0.12"
ncurses = "5.87.0"
time = "0.1.38"
rust-ini = "0.10.0"
xdg = "2.1.0"
nom = "3.2.1"
getopts = "0.2.15"

[lib]
name = "ncmpc"
path = "src/lib.rs"

[[bin]]
name = "ncmpc"
path = "src/main.rs"
doc = false
