[package]
name = "ncmpc"
version = "0.0.1"
authors = ["Benjamin Chrétien <chretien.b@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.0"
getopts = "0.2.15"
lazy_static = "1.1.0"
mpd = "0.0.12"
ncurses = "5.87.0"
nom = "3.2.1"
rust-ini = "0.10.0"
time = "0.1.38"
xdg = "2.1.0"

[lib]
name = "ncmpc"
path = "src/lib.rs"

[[bin]]
name = "ncmpc"
path = "src/main.rs"
doc = false

[profile.release]
lto = true
debug = true

[profile.bench]
lto = true
