[package]
name = "ncmpc"
version = "0.0.1"
authors = ["Benjamin Chrétien <chretien.b@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
getopts = "0.2.18"
lazy_static = "1.3.0"
mpd = "0.0.12"
ncurses = "5.99.0"
nom = "4.2.3"
rust-ini = "0.13.0"
time = "0.1.42"
xdg = "2.2.0"

[lib]
name = "ncmpc"
path = "src/lib.rs"

[[bin]]
name = "ncmpc"
path = "src/main.rs"
doc = false

[profile.release]
lto = true
debug = true

[profile.bench]
lto = true
